[tool.poetry]
name = "documentation-test"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^6.2.5"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
